Update submodule URLs to use correct repository paths

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "client"]
 	path = client
-	url = ./client
+	url = https://github.com/btelagathoti/mernportfolio.git/client
 [submodule "server"]
     path = server
-    url = https://github.com/yourusername/MERN_portfolio.git/server 
+    url = https://github.com/btelagathoti/mernportfolio.git/server 
